Fix setting ownerUuid of CryptogrpahicKey DTOs